feat: display the current version of the Angular framework in the header

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     <mat-toolbar class="app-head__title" color="primary">
       <h1>{{ appName$ | async }}</h1>
         <span class="app-head__spacer"></span>
+        <span class="app-head__version">{{ NG_VERSION }}</span>
         <span>
           <button
             mat-mini-fab
