--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,6 +20,10 @@
       box-shadow: 0px 0px 2px 1px rgba(0,0,0,0.5);
     }
 
+    &__version {
+      padding: 0 1.6rem;
+    }
+
     &__subtitle {
       flex: 0 0 auto;
       padding: 1rem 1.6rem 0 1.6rem;
