--- a/src/app/styles/theme.scss
+++ b/src/app/styles/theme.scss
@@ -1,5 +1,6 @@
 /************************* IMPORTS *************************/
 
+@use '~@angular/material' as mat;
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
@@ -12,7 +13,7 @@
 html {
     font-size: 10px;
   * {
-    font-family: Roboto, "Helvetica Neue Light", "Helvetica Neue", Helvetica,Arial, "Lucida Grande", sans-serif;
+    font-family: Roboto, "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
@@ -35,43 +36,40 @@ body {
 
 /************************* BASE THEME *************************/
 
-// Import library functions for theme creation.
-@import '~@angular/material/theming';
-
 // Include non-theme styles for core.
-@include mat-core();
+@include mat.core();
 
 /************************* LIGHT THEME *************************/
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$app-primary: mat-palette($mat-indigo);
-$app-accent:  mat-palette($mat-pink, A200, A100, A400);
+$app-primary: mat.define-palette(mat.$indigo-palette);
+$app-accent:  mat.define-palette(mat.$pink-palette, A200, A100, A400);
 // The warn palette is optional (defaults to red).
-$app-warn:    mat-palette($mat-red);
+$app-warn:    mat.define-palette(mat.$red-palette);
 
 // Create the theme object (a Sass map containing all of the palettes).
-$app-theme: mat-light-theme($app-primary, $app-accent, $app-warn);
+$app-theme: mat.define-light-theme($app-primary, $app-accent, $app-warn);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include angular-material-theme($app-theme);
+@include mat.all-component-themes($app-theme);
 
 /************************* DARK THEME *************************/
 
 // Define an alternate dark theme.
-$dark-primary: mat-palette($mat-pink, A200, A100, A400);
-$dark-accent:  mat-palette($mat-indigo);
-$dark-warn:    mat-palette($mat-red);
-$dark-theme:   mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
+$dark-primary: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$dark-accent:  mat.define-palette(mat.$indigo-palette);
+$dark-warn:    mat.define-palette(mat.$red-palette);
+$dark-theme:   mat.define-dark-theme($dark-primary, $dark-accent, $dark-warn);
 
 // Include the alternative theme styles inside of a block with a CSS class. You can make this
 // CSS class whatever you want. In this example, any component inside of an element with
 // `.app-dark-theme` will be affected by this alternate dark theme instead of the default theme.
 .app-dark-theme {
-  @include angular-material-theme($dark-theme);
+  @include mat.all-component-themes($dark-theme);
   background: #303030;
   color: #FFFFFF;
 }
